PRESTAGE: fixing docker errors
